<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OsuFootPrint2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="log">Log in</string>
    <string name="appname">OSU FOOTPRINT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New User</string>
    <string name="create_user">Create User</string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_myfootprints">Myfootprints</string>
    <string name="title_activity_pop">PopActivity</string>
    <string name="title_activity_wishlist">WishlistActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_my_footprint">MyFootprint</string>
    <string name="title_activity_new_accounts">NewAccounts</string>
    <string name="title_activity_pop_activities">PopActivities</string>
    <string name="title_activity_my_wishlist">MyWishlist</string>

</resources>
